[package]
name = "wtfrost"
version = "4.0.0"
edition = "2021"
authors = ["Joey Yandle <xoloki@gmail.com>"]
license = "Apache-2.0"
description = "Weighted Threshold implementation of FROST, a Schnorr aggregated threshold signature scheme"
readme = "README.md"
repository = "https://github.com/Trust-Machines/frost/"
keywords = ["cryptography", "crypto", "frost"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2"
hashbrown = { version = "0.13", features = ["serde"] }
hex = "0.4.3"
num-traits = "0.2"
polynomial = { version = "0.2.5", features = ["serde"] }
primitive-types = "0.12"
rand_core = "0.6"
p256k1 = "4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "v1_bench"
harness = false

[[bench]]
name = "v2_bench"
harness = false

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "wtfrost"
path = "src/main.rs"
