[package]
name = "wsts"
version = "1.2.0"
edition = "2021"
authors = ["Joey Yandle <xoloki@gmail.com>"]
license = "Apache-2.0"
description = "Weighted Schnorr Threshold Signatures, based on FROST"
readme = "README.md"
repository = "https://github.com/Trust-Machines/wsts/"
keywords = ["cryptography", "crypto", "frost"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4"
hashbrown = { version = "0.13", features = ["serde"] }
hex = "0.4.3"
num-traits = "0.2"
polynomial = { version = "0.2.5", features = ["serde"] }
primitive-types = "0.12"
rand_core = "0.6"
p256k1 = "5.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "v1_bench"
harness = false

[[bench]]
name = "v2_bench"
harness = false

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "wsts"
path = "src/main.rs"
